2005-11-01  Stepan Kasal  <kasal@ucw.cz>

	* lib/install-sh: Use "trap '' 0" instead of "trap - 0", so that
	the code is portable to both POSIX and pre-POSIX shells.

2005-10-17  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/nobase.test: Use `chmod a-x' instead of `chmod -x',
	suggested by Eric Blake.

2005-10-17  Stepan Kasal  <kasal@ucw.cz>

	* doc/automake.texi (Program and Library Variables): Typo.
	* lib/Automake/Variable.pm (transform_variable_recursively): Typo
	in a comment.

2005-10-03  Stepan Kasal  <kasal@ucw.cz>

	* ChangeLog.03, automake.in, tests/overrid.test: Typos.

2005-10-03  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/nobase.test: Exercise previous patch.

2005-10-03  Peter O'Gorman  <peter@pogma.com>  (tiny change)

	* lib/am/distdir.am: Remove $(SHELL) when calling install_sh
	* m4/strip.m4: Ditto.
	* m4/install-sh.m4: Add $(SHELL) to the definition of install_sh

2005-09-13  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/automake.texi (limitations on file names): New section.
	* lib/install-sh: Rewrite to support '*' in file names.
	Also, tune so that we don't invoke so many commands in the usual case.
	* tests/instspc.test: The "*" test is now fixed.

2005-09-13  Stepan Kasal  <kasal@ucw.cz>

	* automake.in (Languages) <cppasm>: Fix typo in the comment.

2005-09-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/ltlib.am (uninstall-%DIR%LTLIBRARIES): Do not put
	shell in verbose mode.

2005-08-07  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/Variable.pm (variable_value): Do not read the TRUE
	value of a conditionally defined variable.
	Report from Juergen Leising.

	* automake.in (lang_yacc_target_hook): Use AM_MAKEFLAGS in recursive
	$(MAKE) invocations.
	* lib/am/texibuild.am (?GENERIC_INFO?%SOURCE_SUFFIX%%DEST_SUFFIX%):
	Likewise.
	* lib/am/texi-vers.am (%STAMPVTI%): Likewise.
	* lib/am/remake-hdr.am (%CONFIG_H%): Likewise.
	* Makefile.am (maintainer-check): Check for this.
	Report from Stepan Kasal.
