@@ -1,3 +1,10 @@
+2006-01-05  Zack Weinberg  <zackw@panix.com>
+	Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* lib/depcomp: Add 'ia64hp' dependency style.
+	Zack's original patch was contributed to GCC on 2005-06-13.
+	(tru64): Typo.
+
 2005-11-01  Stepan Kasal  <kasal@ucw.cz>
 
 	* lib/install-sh: Use "trap '' 0" instead of "trap - 0", so that
